1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (swarm_ChangeLog): Add.

1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* defobj.ent.in: Make defobjrevhistory be a build-directory path.

1998-05-26  Alex Lancaster  <alex@santafe.edu>

	* defobj.ent.in: Added entity (defobjrevhistory) for the
	automatically generated revision history.

1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

	* defobj.ent.in: New file.

	* defobj.ent: Removed.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
